# korean_spell_checker

./: .gitignore  README.md  _core.pyi  main.py  pyproject.toml  requirements.txt  run.bat  run_test.bat  run_tokenizer.bat  scratch.py
configs/: raw_string_searcher_config.py  spell_checker_config.py  spell_checker_config_builder.py  spell_checker_config_builder_parser.py  spell_checker_config_meaning.py  spell_checker_config_spacing.py  spell_checker_config_specific.py  spell_checker_config_spelling.py  spell_checker_config_warning.py  spell_checker_confing_builder_parser.py
dictionary/: ko_dictionary.csv  ko_dictionary.xlsx
engines/: raw_searcher.py  spell_checker.py
korean_spell_checker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
models/: constants.py  interface.py  spell_checker_classes.py
reporters/: html_reporter.py
rust/: Cargo.toml
rust/src/: lib.rs  raw_searcher.rs  spell_checker.rs
scripts/: bktree.py  build_dict_pickle.py  quick_launcher.pyw  quick_tokenizer.py  run.bat  run_test.bat  run_tokenizer.bat  run_venv.bat
tests/: _raw_string.py  conftest.py  helpers.py  test_raw_string_searcher_default_config.py  test_spell_checker_default_config.py  test_spell_checker_engine.py
tests/data/: meaning.tsv  spacing.tsv  spelling.tsv
tests/raw_data/: meaning.tsv  spacing.tsv  spelling.tsv
tokenizations/: ko_tokenizer.py  utils.py
utils/: file_io.py  hangul.py
