[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-spell-checker"
version = "0.1.0"

[tool.setuptools.packages.find]
where = [".."]
include = ["korean_spell_checker*"]
exclude = ["korean_spell_checker.venv*", "korean_spell_checker.tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
extraPaths = [".."]
