[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "korean-spell-checker"
version = "0.1.0"

[tool.setuptools.packages.find]
where = [".."]
include = ["korean_spell_checker*"]
exclude = ["korean_spell_checker.venv*", "korean_spell_checker.tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["perf: 성능 측정 테스트"]
addopts = "-m 'not perf'"

[tool.pyright]
extraPaths = [".."]

[tool.maturin]
module-name = "_core"
features = ["pyo3/extension-module"]
manifest-path = "rust/Cargo.toml"